--- a/Components/GridV2.razor
+++ b/Components/GridV2.razor
@@ -7,25 +7,22 @@
     display: grid;
     grid-template-columns: repeat(@Game.GridSize, 60px);
     grid-template-rows: repeat(@Game.GridSize, 60px);
-    gap: 2px;
+    max-width: fit-content;
+    margin-inline: auto;
+    border: 1px solid black;
   }
   .cell {
     border: 1px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+    text-align: center;
   }
-  .player {
-    background-color: yellow;
-  }
-  .droppable::after {
+  .player::after {
     content: '●';
-    position: absolute;
-    top: 4px;
-    right: 4px;
-    font-size: 10px;
+    font-size: 60px;
     color: #0066cc;
+    line-height: 53px;
+  }
+  .droppable {
+    background-color: black;
   }
 </style>
 
@@ -42,9 +39,7 @@
       if (isPlayer) classes += " player";
       if (hasDroppable) classes += " droppable";
 
-      <div class="@classes" data-row="@y" data-col="@x">
-        @y@x
-      </div>
+      <div class="@classes" data-row="@y" data-col="@x"></div>
     }
   }
 </div>
